5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1578_1559.log
== SUBMITION (2019-03-18 19:26:10) 
-- CODE:
frase = "ADA LOVELACE foi a primeira programodora da historia"
print("Ada Lovelace foi a primeira a programadora da historia. upper(())"
-- EXECUTION TIME:
0.204031
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 3
    
                                                                             ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:26:59) 
-- CODE:
frase = "ADA LOVELACE foi a primeira programodora da historia"
print("Ada Lovelace foi a primeira a programadora da historia.".upper())
-- EXECUTION TIME:
0.224033
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA A PROGRAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:27:11) 
-- CODE:
frase = "ADA LOVELACE foi a primeira programodora da historia"
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.145328
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
